I added a VisibleExp property to the RenderObjectAttribute class, to allow for showing/hiding the associated object at render time.

--- a/src/CG.Blazor.Forms/CG.Blazor.Forms.csproj
+++ b/src/CG.Blazor.Forms/CG.Blazor.Forms.csproj
@@ -32,6 +32,7 @@ Platforms supported:
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.12" />
   </ItemGroup>
 
   <ItemGroup>
